<resources>
    <string name="app_name">TOUR GUIDE</string>
    <string name="auck">AUCKLAND SKY TOWER</string>
    <string name="auck1">" The Sky Tower is an observation and telecommunications tower located at the corner of Victoria and Federal Streets in the Auckland CBD, Auckland, New Zealand.\n"</string>
    <string name="auck2"><![CDATA[Address: Victoria St W & Federal St, Auckland, 1010, New Zealand\n]]></string>
    <string name="auck3">Height: 722′\n</string>
    <string name="auck4">Construction started: 1994\n</string>
    <string name="auck5">Opened: August 3, 1997\n</string>
    <string name="auck6">Hours: Closing soon · 9AM–10PM\n</string>
    <string name="auck7">Architecture firm: Craig Craig Moller Ltd.\n</string>
    <string name="auck8">Owner: Skycity Entertainment Group\n</string>
    <string name="auck9">Phone: +64 9-363 6000\n</string>
    <string name="auck10">"Architectural style: Modern architecture  "</string>
    <string name="bulg">ALEXANDER NEVSKY CATHEDRAL,SOFIA</string>
    <string name="bulg1">" The St. Alexander Nevsky Cathedral is a Bulgarian Orthodox cathedral in Sofia, the capital of Bulgaria.\n"</string>
    <string name="bulg2">Address: pl. \"Sveti Aleksandar Nevski\", 1000 Sofia, Bulgaria\n</string>
    <string name="bulg3">Opened: 1912\n</string>
    <string name="bulg4">Function: Place of worship\n</string>
    <string name="bulg5">Architectural style: Byzantine Revival architecture\n</string>
    <string name="bulg6">Phone: +359 2 988 1704\n</string>
    <string name="bulg7">Province: Sofia\n</string>
    <string name="bulg8">Architect: Alexander Pomerantsev\n</string>
    <string name="bulg9">"Burials: Boris Christoff  "</string>
    <string name="egy">GREAT SPHINX OF GIZA</string>
    <string name="egy1">The Great Sphinx of Giza, commonly referred to as the Sphinx of Giza or just the Sphinx, is a limestone statue of a reclining sphinx, a mythical creature with the body of a lion and the head of a human.</string>
    <string name="egy2">Address: Nazlet El-Semman, Al Haram, Giza Governorate, Egypt\n</string>
    <string name="egy3">Height: 66′\n</string>
    <string name="egy4">Dimensions: 66′ 0″ x 63′ 0″ x 238′ 0″\n</string>
    <string name="egy5">Location: Giza Plateau\n</string>
    <string name="egy6">Medium: Limestone\n</string>
    <string name="egy7">Architectural style: Ancient Egyptian architecture\n</string>
    <string name="egy8">Hours: Open today · 8AM–5PM\n</string>
    <string name="egy9">"Period: Old Kingdom of Egypt   "</string>
    <string name="par">EIFFEL TOWER</string>
    <string name="par1">" The Eiffel Tower is a wrought iron lattice tower on the Champ de Mars in Paris, France. It is named after the engineer Gustave Eiffel, whose company designed and built the tower.\n"</string>
    <string name="par2">Address: Champ de Mars, 5 Avenue Anatole France, 75007 Paris, France\n</string>
    <string name="par3">Height: 984′\n</string>
    <string name="par4">Construction started: January 26, 1887\n</string>
    <string name="par5">Opened: March 31, 1889\n</string>
    <string name="par6">Hours:9:30AM–11PM\n</string>
    <string name="par7">Phone: +33 892 70 12 39\n</string>
    <string name="par8">"Architect: Stephen Sauvestre  "</string>
    <string name="ind">AKSHARDHAM</string>
    <string name="ind1">Akshardham or Swaminarayan Akshardham complex is a Hindu mandir, and a spiritual-cultural campus in New Delhi, India.\n</string>
    <string name="ind2">Address: Noida Mor, Pandav Nagar, New Delhi, Delhi 110092\n</string>
    <string name="ind3">Dedicated to: Swaminarayan\n</string>
    <string name="ind4">Phone: 011 4344 2344\n</string>
    <string name="ind5">Built by: Pramukh Swami Maharaj\n</string>
    <string name="ind6">Primary deity: Swaminarayan\n</string>
    <string name="ind7">Creator: Pramukh Swami Maharaj\n</string>
    <string name="ind8">"Locale: New Delhi, Noida   "</string>
    <string name="welcome">WELCOME</string>
    <string name="paris">PARIS</string>
    <string name="auckland">AUCKLAND</string>
    <string name="india">INDIA</string>
    <string name="bulgaria">BULGARIA</string>
    <string name="egypt">EGYPT</string>
    <string name="area_name">AREA NAME</string>
    <string name="desc">DESCRIPTION</string>
</resources>
