<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.tourguide.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:paddingLeft="@dimen/fortyEight"
        android:text="@string/welcome"
        android:textSize="@dimen/sixtys" />

    <Button
        android:id="@+id/paris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/twentyFive"
        android:fontFamily="monospace"
        android:text="@string/paris"
        android:textSize="30sp" />

    <Button
        android:id="@+id/auckland"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fiftyFive"
        android:layout_marginTop="@dimen/twentyFive"
        android:fontFamily="monospace"
        android:text="@string/auckland"
        android:textSize="@dimen/thirty" />


    <Button
        android:id="@+id/india"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/twoHundred"
        android:layout_marginTop="@dimen/twentyFive"
        android:fontFamily="monospace"
        android:text="@string/india"
        android:textSize="@dimen/thirty" />

    <Button
        android:id="@+id/bulgaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixty"
        android:layout_marginTop="@dimen/twentyFive"
        android:fontFamily="monospace"
        android:text="@string/bulgaria"
        android:textSize="@dimen/thirty" />

    <Button
        android:id="@+id/egypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginTop="@dimen/twentyFive"
        android:fontFamily="monospace"
        android:text="@string/egypt"
        android:textSize="@dimen/thirty" />

</LinearLayout>
